--- a/Angular/app-dentistas/src/app/app.component.html
+++ b/Angular/app-dentistas/src/app/app.component.html
@@ -332,7 +332,7 @@
 
     <!-- <span>{{ title }} app is running!</span> -->
     <div>
-      <span>{{ businesssTitle }}</span>
+      <span>{{ businessTitle }}</span>
       <span>Teléfono: {{ businessPhone}}</span>
       <span>Dentista: {{ dentistName }}</span>
     </div>
