--- a/Angular/app-dentistas/src/app/aerolinea/vuelos/vuelos.component.sass
+++ b/Angular/app-dentistas/src/app/aerolinea/vuelos/vuelos.component.sass
@@ -11,3 +11,13 @@
 
 .input
   width: 80%
+
+table
+  border-collapse: collapse
+
+
+td, th
+  border: 1px solid #999
+  padding: 0.5rem
+  text-align: left
+
