--- a/Angular/app-dentistas/src/app/aerolinea/vuelos/vuelos.component.html
+++ b/Angular/app-dentistas/src/app/aerolinea/vuelos/vuelos.component.html
@@ -1,28 +1,32 @@
-<div class="card">
-  <label for="">Número: </label><input class="input" type="text" [(ngModel)]="numero">
-  <label for="">Fecha: </label><input class="input" type="date" [(ngModel)]="fecha">
-  <label for="">Horario: </label><input class="input" type="text" [(ngModel)]="horario">
-  <label for="">Origen: </label><input class="input" type="text" [(ngModel)]="origen">
-  <label for="">Destino: </label><input class="input" type="text" [(ngModel)]="destino">
-  <button class="input" type="button" (click)="onClick()">Agregar</button>
-</div>
+<div style="display: flex; gap: .5rem; justify-content: center;">
+  <div class="card" style="width: 30%;">
+    <label for="">Número: </label><input class="input" type="text" [(ngModel)]="numero">
+    <label for="">Fecha: </label><input class="input" type="date" [(ngModel)]="fecha">
+    <label for="">Horario: </label><input class="input" type="text" [(ngModel)]="horario">
+    <label for="">Origen: </label><input class="input" type="text" [(ngModel)]="origen">
+    <label for="">Destino: </label><input class="input" type="text" [(ngModel)]="destino">
+    <button class="input" type="button" (click)="onClick()">Agregar</button>
+  </div>
 
-<h3>Información de vuelos</h3>
-<table>
-  <thead>
-    <th>Número</th>
-    <th>Fecha</th>
-    <th>Horario</th>
-    <th>Origen</th>
-    <th>Destino</th>
-  </thead>
-  <tbody>
-    <tr *ngFor="let vuelo of vuelos ; index as miIndice">
-      <td>{{ vuelo.Numero }}</td>
-      <td>{{ vuelo.Fecha }}</td>
-      <td>{{ vuelo.Horario }}</td>
-      <td>{{ vuelo.Origen }}</td>
-      <td>{{ vuelo.Destino }}</td>
-    </tr>
-  </tbody>
-</table>
+  <div class="card">
+    <h3>Información de vuelos</h3>
+    <table>
+      <thead>
+        <th>Número</th>
+        <th>Fecha</th>
+        <th>Horario</th>
+        <th>Origen</th>
+        <th>Destino</th>
+      </thead>
+      <tbody>
+        <tr *ngFor="let vuelo of vuelos ; index as miIndice">
+          <td>{{ vuelo.Numero }}</td>
+          <td>{{ vuelo.Fecha }}</td>
+          <td>{{ vuelo.Horario }}</td>
+          <td>{{ vuelo.Origen }}</td>
+          <td>{{ vuelo.Destino }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
